--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,9 @@
 #battleInfoBox {
     text-align: Center;
 }
+
+@media only screen and (max-width: 800px) {
+  #overview {
+    visibility: hidden;
+  }
+}
