--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,55 @@
+
+.page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-content: center;
+}
+
+.ww-button-container {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+}
+
+.timeline-button-container {
+    display: flex;
+    justify-content: space-around;
+    align-content: center;
+}
+
 /* slider */
 
-#slider {
+/* #slider {
     width: 100%;
     border-radius: 3px;
     appearance: none;
     border: 1px solid brown;
     outline: none;
+} */
+#slider {
+      appearance: none;
+      width: 100%;
+      height: 15px;
+      background: #865718;
+      outline: none;
+      opacity: 0.9;
+      transition: opacity 0.2s;
+      border-radius: 20px;
 }
+#slider:hover {
+      opacity: 1;
+   }
+#slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      background: rgba(0, 0, 0, 0.842);
+      cursor: pointer;
+      opacity: 1;
+   }
 
 /*--------------------------------------------Map*/
 
