--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,43 @@
-
 .page-container {
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
 
+.init-ww-button-container {
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: -100%;
+    z-index: 2;
+}
+
 .ww-button-container {
+    position: relative;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    margin-bottom: 0%;
+    transition: margin-bottom 1s ease-in;
+    z-index: 2;
+}
+
+.init-map-button-container {
+    width: 100%;
+    visibility: hidden;
+    z-index: 1;
+    transform: scale(0);
 }
 
 .map-button-container {
     width: 100%;
-    visibility: hidden;
+    visibility: visible;
+    z-index: 1;
+    transform: scale(1);
+    transition: transform 1s ease-in;
 }
 
 /* slider */
