--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,30 @@
+*{
+    padding: 0;
+    border: 0;
+    margin: 0;
+}
+
 .page-container {
+    background-color: rgb(140, 206, 206);
+    background-size: cover;
     width: 100vw;
-    height: 100vh;
+    height: 130vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+}
+
+#ww1, #ww2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #8f1c18;
+    color: white;
+    cursor: pointer;
 }
 
 .init-ww-button-container {
@@ -16,8 +36,7 @@
 }
 
 .ww-button-container {
-    position: relative;
-    width: 100%;
+    width: 50%;
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 0%;
@@ -38,6 +57,10 @@
     z-index: 1;
     transform: scale(1);
     transition: transform 1s ease-in;
+}
+
+#year { 
+    color: rgb(8, 8, 8);
 }
 
 /* slider */
