--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,10 @@
 /* Page Background */
 
 .page-container {
-    background-color: rgb(186 211 193);
+    background-color: #cec5ae;
     background-size: cover;
     width: 100vw;
-    height: 130vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -93,11 +93,17 @@
 
 /*--------------------------------------------Map*/
 
+.maps {
+    width: 100%;
+    height: 630px;
+    position: relative;
+}
+
 #map {
     left: 10%;
     height: 630px;
     width: 80%;
-    position: relative;
+    position: absolute;
 }
 
 #overview {
