--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@500&family=Special+Elite&display=swap');
+
 *{
     padding: 0;
     border: 0;
@@ -5,6 +7,11 @@
 }
 
 /* Page Background */
+
+h1 {
+    font-family: 'Special Elite', cursive;
+    font-size: 50px;
+}
 
 .page-container {
     background-color: #cec5ae;
@@ -51,6 +58,10 @@
     visibility: hidden;
     z-index: 1;
     transform: scale(0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .map-button-container {
@@ -58,24 +69,52 @@
     visibility: visible;
     z-index: 1;
     transform: scale(1);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
     transition: transform 1s ease-in;
+    z-index: 1;
 }
 
 #year { 
+    font-family: 'Special Elite', cursive;
+    font-size: 35px;
     color: rgb(8, 8, 8);
+}
+
+.period-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.period-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 85px;
+    border-radius: 5px;
+    color: white;
+    background-color: #552c2a;
+    cursor: pointer;
 }
 
 /* slider */
 
 #slider {
       appearance: none;
-      width: 100%;
+      width: 80%;
       height: 15px;
       background: #865718;
       outline: none;
       opacity: 0.9;
       transition: opacity 0.2s;
       border-radius: 20px;
+      z-index: 2;
 }
 #slider:hover {
       opacity: 1;
@@ -97,6 +136,7 @@
     width: 100%;
     height: 630px;
     position: relative;
+    z-index: 1;
 }
 
 #map {
@@ -131,8 +171,9 @@
 .feedback-container {
     width: 100vw;
     height: 100vh;
-    background-color: rgb(186 211 193);
+    background-color: #cec5ae;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
