--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ p {
 .init-ww-button-container {
     width: 50%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-bottom: -100%;
     z-index: 2;
 }
@@ -51,7 +51,7 @@ p {
 .ww-button-container {
     width: 50%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     margin-bottom: 0%;
     transition: margin-bottom 1s ease-in;
     z-index: 2;
@@ -104,6 +104,7 @@ p {
     border-radius: 5px;
     color: white;
     background-color: #552c2a;
+    margin-bottom: 20px;
     cursor: pointer;
 }
 
@@ -158,6 +159,12 @@ p {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   position: absolute;
 
+}
+
+#battleInfoBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .infoBoxTable {
