country flags added and flagpoles positioned either side of info box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,21 +82,13 @@ p {
     z-index: 1;
 }
 
-.period-buttons {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
 .period-button {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 22px;
     width: 85px;
-    border-radius: 5px;
+    border-radius: 50px 50px 50px 50px;
     color: white;
     background-color: #552c2a;
     margin-bottom: 4px;
@@ -176,7 +168,7 @@ p {
 }
 
 #map {
-    top: -0%;
+    top: 1%;
     left: 5%;
     height: 630px;
     width: 90%;
@@ -184,27 +176,54 @@ p {
 }
 
 #overview {
-  left: 10%;
+  left: 6%;
   height: 175px;
+  border-radius: 50%;
   width: 175px;
-  bottom: 80px;
+  bottom: 2%;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   position: absolute;
 
 }
 
 #battleInfoBox {
+    margin-top: 2%;
+    width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 }
 
+.flagsNpole {
+    height: 100%;
+    width: 17px;
+    margin: 0px;
+}
+
+.flagpole {
+    height: 100%;
+    width: 17px;
+    background: url("/assets/flag_images/flagpole2.png") no-repeat;
+}
+
+.flags {
+    width: 200px;
+    height: 100px;
+    background-color: black;
+}
+
 .infoBoxTable {
-    width: 80%;
+    width: 60%;
 }
 
 th, td {
-    margin: 0px 10px 20px;
+    margin: 10px 10px 20px;
+}
+
+.battle-description {
+    width: 80%;
+    margin: 0 12%;
+    font-size: 25px;
 }
 
 
