--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,27 +148,47 @@ p {
       width: 80%;
       height: 15px;
       background: #865718;
+      border-radius: 3px;
       outline: none;
       opacity: 0.9;
       filter: brightness(100%);
       transition: opacity 0.2s, filter 0.2s;
-      border-radius: 20px;
+      overflow: visible;
       z-index: 2;
 }
 #slider:hover {
       opacity: 1;
       filter: brightness(150%);
    }
+
 #slider::-webkit-slider-thumb {
       -webkit-appearance: none;
       appearance: none;
-      border-radius: 50%;
-      width: 20px;
-      height: 20px;
-      background: rgba(0, 0, 0, 0.842);
+      width: 130px;
+      height: 82px;
+      background: url("/assets/cluster_images/mww2Aerial.png") no-repeat right bottom;
+      background-size: cover;
       cursor: pointer;
       opacity: 1;
+      transform: rotate(0deg);
    }
+
+#post-slider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 130px;
+      height: 82px;
+      background: url("/assets/cluster_images/mww2Aerial.png") no-repeat right bottom;
+      background-size: cover;
+      cursor: pointer;
+      opacity: 1;
+      transform: rotate(-25deg);
+      transition: transform 0.5s ease-in;
+   }
+
+#slider::-webkit-slider-runnable-track {
+    width: 110%;
+}
 
 /*--------------------------------------------Map*/
 
@@ -192,9 +212,9 @@ p {
 
 #map {
     top: 1%;
-    left: 2.5%;
+    left: 1.5%;
     height: 740px;
-    width: 95%;
+    width: 97%;
     position: absolute;
     border-radius: 3px;
 }
