--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,20 @@ h1 {
     font-family: 'Special Elite', sans-serif;
     font-size: 70px;
     color: rgb(58, 32, 27);
-    margin: 20px 0px;
+    margin: 20px 0px 0px;
 }
 
 h2 {
     font-family: 'Josefin Slab', sans-serif;
     font-size: 60px;
     color: wheat;
+}
+
+.key p {
+    color: rgb(224, 192, 192);
+    font-size: x-large;
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    text-align: center;
 }
 
 .intro p {
@@ -62,7 +69,7 @@ h2 {
     background-blend-mode: multiply;
     background-size: cover;
     width: 100vw;
-    height: 180vh;
+    height: 200vh;
     transition: height 1s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -74,12 +81,14 @@ h2 {
     width: 85%;
     text-align: center;
     transform: scale(1);
-    transition: transform 1s ease-in-out;
+    opacity: 100%;
+    transition: transform 1s ease-in-out, opacity 0.8s ;
+    margin-top: 30px;
 }
 
 .key {
     height: 0px;
-    margin-top: -100px;
+    margin-top: -150px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -122,22 +131,22 @@ li img {
     font-family: 'Josefin Slab', sans-serif;
 }
 
-#ww1 {
+.ww1 {
     float: left;
 }
 
-#ww2 {
+.ww2 {
     float: right;
 }
 
-#ww1, #ww2 {
+.ww1, .ww2 {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 150px;
     height: 149px;
     border-radius: 50%;
-    margin: 30px;
+    margin: 40px;
     background: url("/assets/flag_images/globe.png"), rgba(189, 137, 60, 0.568);
     background-blend-mode: multiply;
     background-size: cover;
@@ -147,21 +156,10 @@ li img {
     font-weight: bold;
 }
 
-.init-ww-button-container {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0%;
-    z-index: 2;
-}
-
-.ww-button-container {
-    width: 80%;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 0%;
-    transition: margin-bottom 1s cubic-bezier(0.07, 0.86, 1, 1), width 1s cubic-bezier(0.07, 0.86, 1, 1);
-    z-index: 2;
+.world-highlighted {
+    transform: scale(1.3);
+    box-shadow: 0px 20px 10px white;
+    transition: transform 1s ease-in-out, box-shadow 1s ease-in-out;
 }
 
 .init-map-button-container {
@@ -198,11 +196,11 @@ li img {
     width: 85px;
     border-radius: 50px 50px 50px 50px;
     color: whitesmoke;
-    background-color: #6b2e2a;
+    background-color: #b3544a;
     margin-bottom: 6px;
     cursor: pointer;
     opacity: 85%;
-    filter: brightness(180%);
+    filter: brightness(100%);
     font-family: 'Roboto', 'Arial', 'sans-serif';
 }
 
@@ -228,6 +226,11 @@ li img {
 
 .pb6 {
     width: 65%;
+}
+
+.highlighted {
+    filter: brightness(120%);
+    box-shadow: 0px 5px 8px white;
 }
 
 
@@ -377,7 +380,7 @@ li img {
 }
 
 .flags {
-    width: 100px;
+    width: 90px;
     height: auto;
 }
 
@@ -390,17 +393,18 @@ li img {
 }
 
 #friendly-flags img {
-    width: 100px;
+    width: 90px;
     height: 50px;
 }
 
 #enemy-flags img {
-    width: 100px;
+    width: 90px;
     height: 50px;
 }
 
 .infoBoxTable {
     width: 90%;
+    margin-bottom: 25px;
 }
 
 th h1 {
