--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 
 h1 {
     font-family: 'Special Elite', sans-serif;
-    font-size: 70px;
+    font-size: 90px;
     color: rgb(58, 32, 27);
     margin: 20px 0px 0px;
 }
@@ -19,6 +19,14 @@ h2 {
     font-family: 'Josefin Slab', sans-serif;
     font-size: 60px;
     color: wheat;
+}
+
+h4 {
+    color: whitesmoke;
+    font-size: 30px;
+    line-height: 40px;
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+    margin-top: 10px;
 }
 
 .key p {
@@ -39,7 +47,7 @@ h2 {
 
 .init-page-container {
     background: url("/assets/flag_images/cemetery.png") no-repeat center center,
-     linear-gradient(0deg, rgb(68, 44, 12) 7%, rgba(87, 45, 6, 0.301) 100%);
+     linear-gradient(0deg, rgb(68, 44, 12) 7%, rgba(29, 15, 2, 0.301) 100%);
     background-blend-mode: multiply;
     background-size: cover;
     overflow: visible;
@@ -70,7 +78,7 @@ h2 {
     background-size: cover;
     width: 100vw;
     height: 200vh;
-    transition: height 1s ease-in-out;
+    transition: height 1s ease-in-out, background 1s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -82,12 +90,13 @@ h2 {
     text-align: center;
     transform: scale(1);
     opacity: 100%;
-    transition: transform 1s ease-in-out, opacity 0.8s ;
+    transition: transform 1s ease-in-out, opacity 0.3s ;
     margin-top: 30px;
 }
 
 .key {
     height: 0px;
+    width: 90%;
     margin-top: -150px;
     display: flex;
     flex-direction: row;
@@ -128,7 +137,22 @@ li img {
     position: absolute;
     top: 0;
     right: 0;
+    margin: 10px;
+    font-size: 22px;
     font-family: 'Josefin Slab', sans-serif;
+    text-decoration: none;
+    color: rgb(29, 10, 10);
+    background: url("/assets/flag_images/envelope.png") no-repeat left top;
+    background-size: cover;
+    border-radius: 2px;
+    width: 100px;
+    height: 56px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 8px black;
+    opacity: 0%;
+    transition: opacity 2s ease;
 }
 
 .ww1 {
@@ -139,7 +163,7 @@ li img {
     float: right;
 }
 
-.ww1, .ww2 {
+.ww {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -154,12 +178,21 @@ li img {
     cursor: pointer;
     font-family: 'Josephin Slab', sans-serif;
     font-weight: bold;
+    transform: scale(1);
+    box-shadow: 0px 3px 15px white;
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+}
+
+.ww:not(.world-highlighted):hover {
+    box-shadow: 0px 7px 20px white;
+    transform: scale(1.1);
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .world-highlighted {
     transform: scale(1.3);
-    box-shadow: 0px 20px 10px white;
-    transition: transform 1s ease-in-out, box-shadow 1s ease-in-out;
+    box-shadow: 0px 20px 50px white;
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .init-map-button-container {
@@ -201,7 +234,14 @@ li img {
     cursor: pointer;
     opacity: 85%;
     filter: brightness(100%);
+    transition: filter 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
     font-family: 'Roboto', 'Arial', 'sans-serif';
+}
+
+.period-button:not(.highlighted):hover {
+    filter: brightness(110%);
+    box-shadow: 0px 2px 6px white;
+    transition: filter 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .pb1 {
@@ -226,6 +266,25 @@ li img {
 
 .pb6 {
     width: 65%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 22px;
+    border-radius: 50px 50px 50px 50px;
+    color: whitesmoke;
+    background-color: #b3544a;
+    margin-bottom: 6px;
+    cursor: pointer;
+    opacity: 85%;
+    filter: brightness(100%);
+    transition: filter 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+}
+
+.pb6:not(.highlighted):hover {
+    filter: brightness(110%);
+    box-shadow: 0px 2px 6px white;
+    transition: filter 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .highlighted {
@@ -245,6 +304,28 @@ li img {
     margin-top: -22px;
 }
 
+.banner {
+    width: 110px;
+    height: 45px;
+    background: url("/assets/flag_images/banner.png") right bottom no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start-date {
+    margin-left: 5px;
+}
+
+.end-date {
+    transform: scaleX(-1);
+}
+
+.end-date h3 {
+    transform: scaleX(-1);
+}
+
 #slider {
       appearance: none;
       width: 96%;
@@ -255,7 +336,7 @@ li img {
       outline: none;
       opacity: 0.9;
       filter: brightness(100%);
-      transition: opacity 0.2s, filter 0.2s;
+      transition: opacity 0.2s ease, filter 0.2s ease;
       overflow: visible;
       z-index: 2;
       cursor: grab;
@@ -291,8 +372,8 @@ li img {
       background-size: cover;
       cursor: pointer;
       opacity: 1;
-      transform: rotate(-15deg);
-      transition: transform 0.5s ease-in-out;
+      transform: rotate(-5deg);
+      transition: transform 0.5s cubic-bezier(0.25, 0.1, 0.33, 3.26);
       margin-bottom: 70px;
       cursor: grab;
    }
@@ -380,7 +461,7 @@ li img {
 }
 
 .flags {
-    width: 90px;
+    width: 85px;
     height: auto;
 }
 
@@ -393,12 +474,12 @@ li img {
 }
 
 #friendly-flags img {
-    width: 90px;
+    width: 85px;
     height: 50px;
 }
 
 #enemy-flags img {
-    width: 90px;
+    width: 87px;
     height: 50px;
 }
 
@@ -447,13 +528,85 @@ td {
 .feedback-container {
     width: 100vw;
     height: 100vh;
-    background-color: #cec5ae;
+    background: url("/assets/flag_images/cemetery.png") no-repeat center center, #b3a073;
+    background-blend-mode: multiply;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.feedback-form {
+.main-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    text-decoration: none;
+    font: 'Arial';
+    width: 140px;
+    height: 40px;
+    border-radius: 6px;
+    background-color: #5c2e29;
+    opacity: 80%;
+    box-shadow: 0;
+    transition: opacity 0.5s ease, box-shadow 0.5s ease;
+    font-family: 'Roboto', 'Arial', 'sans-serif';
+}
+
+.main-link:hover {
     opacity: 100%;
+    box-shadow: 0px 5px 10px black;
+    transition: opacity 0.5s ease, box-shadow 0.5s ease;
+}
+
+.feedback-form {
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 100%;
+}
+
+.form-control {
+    width: 70%;
+    height: 30px;
+    margin: 10px;
+    padding-left: 10px;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    font-family: 'Josefin Slab', sans-serif;
+    font-size: 18px;
+}
+
+#projectFeedback {
+    height: 150px;
+    border-radius: 6px;
+    margin: 20px;
+    padding: 10px;
+    background-color: whitesmoke;
+    font-family: 'Josefin Slab', sans-serif;
+    font-size: 18px;
+}
+
+.submit-btn {
+    width: 50%;
+    height: 30px;
+    margin: 10px;
+    color: white;
+    border-radius: 6px;
+    font-size: 18px;
+    background-color: rgb(212, 91, 69);
+    cursor: pointer;
+    opacity: 80%;
+    box-shadow: 0;
+    transition: opacity 0.5s ease, box-shadow 0.5s ease;
+}
+
+.submit-btn:hover {
+    opacity: 100%;
+    box-shadow: 0px 5px 10px black;
+    transition: opacity 0.5s ease, box-shadow 0.5s ease;
 }
