styling for responsiveness added to instroduction and key

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,39 +10,41 @@
 
 h1 {
     font-family: 'Special Elite', sans-serif;
-    font-size: 90px;
+    font-size: calc(2vw + 30px);
     color: rgb(58, 32, 27);
     margin: 20px 0px 0px;
+    border-bottom: 2px rgb(37, 17, 37);
 }
 
 h2 {
     font-family: 'Josefin Slab', sans-serif;
-    font-size: 60px;
+    font-size: calc(1.8vw + 12px);
     color: wheat;
 }
 
 h4 {
     color: whitesmoke;
-    font-size: 30px;
-    line-height: 40px;
+    font-size: calc(2vw + 10px);
+    line-height: calc(2vw + 10px);
     font-family: 'Roboto', 'Arial', 'sans-serif';
-    margin-top: 10px;
+    margin-top: 3vw;
 }
 
 .key p {
-    color: rgb(224, 192, 192);
-    font-size: x-large;
+    color: white;
+    font-size: calc(2vw + 10px);
     font-family: 'Roboto', 'Arial', 'sans-serif';
     text-align: center;
+    margin-top: 3vw;
 }
 
 .intro p {
     font-family: 'Josefin Slab', sans-serif;
     text-align: center;
     color: whitesmoke;
-    font-size: 26px;
-    line-height: 28px;
-    margin: 5px 0px;
+    font-size: calc(0.6vw + 16px);
+    line-height: calc(0.6vw + 17px);
+    margin: 1vw 0px;
 }
 
 .init-page-container {
@@ -57,19 +59,8 @@ h4 {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    /* animation-name: hero-zoom;
-    animation-duration: 5s;
-    animation-fill-mode: forwards; */
+    overflow: hidden;
 }
-
-/* @keyframes hero-zoom {
-    from{
-        transform: scale(0.9);
-    }
-    to{
-        transform: scale(1);
-    }
-} */
 
 .page-container {
     background: url("/assets/flag_images/cemetery.png") no-repeat center center,
@@ -83,42 +74,41 @@ h4 {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    overflow: hidden;
 }
 
 .intro {
-    width: 85%;
+    width: 95%;
     text-align: center;
     transform: scale(1);
     opacity: 100%;
     transition: transform 1s ease-in-out, opacity 0.3s ;
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .key {
-    height: 0px;
-    width: 90%;
+    height: 400px;
+    width: 100%;
     margin-top: -150px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     transform: scale(0);
     transition: transform 1s ease-in-out;
 }
 
 .key-table {
+    width: 60%;
+    margin: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-ul {
-    margin: 20px 200px;
-}
-
 li {
     color: whitesmoke;
-    font-size: 20px;
+    font-size: calc(2vw + 10px);
     font-family: 'Roboto', 'Arial', 'sans-serif';
     list-style: none;
     line-height: 40px;
@@ -152,7 +142,8 @@ li img {
     align-items: center;
     box-shadow: 0px 4px 8px black;
     opacity: 0%;
-    transition: opacity 2s ease;
+    transform: scale(0);
+    transition: opacity 2s ease, transform 1s ease-in-out;
 }
 
 .ww1 {
@@ -164,13 +155,15 @@ li img {
 }
 
 .ww {
+    align-self: flex-end;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
-    height: 149px;
+    width: calc(5vw + 30px);
+    height: calc(5vw + 30px);
+    min-width: calc(5vw + 30px);
     border-radius: 50%;
-    margin: 40px;
+    margin: 3vw;
     background: url("/assets/flag_images/globe.png"), rgba(189, 137, 60, 0.568);
     background-blend-mode: multiply;
     background-size: cover;
@@ -179,12 +172,12 @@ li img {
     font-family: 'Josephin Slab', sans-serif;
     font-weight: bold;
     transform: scale(1);
-    box-shadow: 0px 3px 15px white;
+    box-shadow: 0px 1.5vw 4vw white;
     transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .ww:not(.world-highlighted):hover {
-    box-shadow: 0px 7px 20px white;
+    box-shadow: 0px 10vw 12vw white;
     transform: scale(1.1);
     transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
@@ -507,7 +500,6 @@ th a {
 td {
     width: 50%;
     text-align: center;
-    margin: 20px;
 }
 
 .battle-description {
@@ -517,9 +509,32 @@ td {
 }
 
 
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
   #overview {
     visibility: hidden;
+  }
+
+  #map {
+      width: 100%;
+      margin-left: -12px;
+  }
+}
+
+
+@media only screen and (max-width: 700px) {
+  .init-page-container {
+      height: 120vh;
+  }
+
+  .page-container {
+      height: 300vh;
+  }
+
+  .contact-link {
+      width: 66.6px;
+      height: 37px;
+      font-size: 16px;
+      margin: 60px 5px 0px 0px;
   }
 }
 
@@ -528,7 +543,7 @@ td {
 .feedback-container {
     width: 100vw;
     height: 100vh;
-    background: url("/assets/flag_images/cemetery.png") no-repeat center center, #b3a073;
+    background: url("/assets/flag_images/cemetery.png") no-repeat center center, #615843;
     background-blend-mode: multiply;
     background-size: cover;
     display: flex;
@@ -576,9 +591,13 @@ td {
     margin: 10px;
     padding-left: 10px;
     border-radius: 5px;
-    background-color: whitesmoke;
     font-family: 'Josefin Slab', sans-serif;
     font-size: 18px;
+    background: beige;
+}
+
+.form-control:focus {
+    background: beige;
 }
 
 #projectFeedback {
@@ -586,13 +605,14 @@ td {
     border-radius: 6px;
     margin: 20px;
     padding: 10px;
-    background-color: whitesmoke;
     font-family: 'Josefin Slab', sans-serif;
     font-size: 18px;
+    background: beige;
 }
 
 .submit-btn {
     width: 50%;
+    min-width: 200px;
     height: 30px;
     margin: 10px;
     color: white;
@@ -609,4 +629,8 @@ td {
     opacity: 100%;
     box-shadow: 0px 5px 10px black;
     transition: opacity 0.5s ease, box-shadow 0.5s ease;
+}
+
+.feedback-response {
+    color: whitesmoke;
 }
