--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,7 @@ h2 {
     font-family: 'Josefin Slab', sans-serif;
     font-size: calc(1.8vw + 12px);
     color: wheat;
+    text-decoration: underline;
 }
 
 h4 {
@@ -43,8 +44,8 @@ h4 {
     font-family: 'Josefin Slab', sans-serif;
     text-align: center;
     color: whitesmoke;
-    font-size: calc(0.6vw + 16px);
-    line-height: calc(0.6vw + 17px);
+    font-size: calc(1.6vw + 6px);
+    line-height: calc(1.7vw + 8px);
     margin: 1vw 0px;
 }
 
@@ -65,12 +66,12 @@ h4 {
 
 .page-container {
     background: url("/assets/flag_images/cemetery.png") no-repeat center center,
-     linear-gradient(0deg, rgba(68, 44, 12) 7%, rgba(87, 45, 6, 0.301) 100%);
+     linear-gradient(0deg, rgb(31, 20, 5) 7%, rgba(68, 44, 12, 0.712) 15%, rgba(87, 45, 6, 0.301) 100%);
     background-blend-mode: multiply;
     background-size: cover;
     width: 100vw;
-    height: 200vh;
-    transition: height 1s ease-in-out, background 1s ease-in-out;
+    height: 220vh;
+    transition: height 1s ease-in-out;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -90,7 +91,7 @@ h4 {
 .key {
     height: 400px;
     width: 100%;
-    margin-top: -150px;
+    margin-top: -100px;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -112,7 +113,7 @@ li {
     font-size: calc(2vw + 10px);
     font-family: 'Roboto', 'Arial', 'sans-serif';
     list-style: none;
-    line-height: 40px;
+    line-height: normal;
 }
 
 li img {
@@ -141,7 +142,7 @@ li img {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 4px 8px black;
+    box-shadow: 0px 4x 6px black;
     opacity: 0%;
     transform: scale(0);
     transition: opacity 2s ease, transform 1s ease-in-out;
@@ -149,13 +150,16 @@ li img {
 
 .ww1 {
     float: left;
+    margin-right: 10px;
 }
 
 .ww2 {
     float: right;
+    margin-left: 10px;
 }
 
 .ww {
+    text-decoration: none;
     align-self: flex-start;
     display: flex;
     justify-content: center;
@@ -164,7 +168,7 @@ li img {
     height: calc(5vw + 50px);
     min-width: calc(5vw + 50px);
     border-radius: 50%;
-    margin: 3vw;
+    /* margin: 3vw; */
     background: url("/assets/flag_images/globe.png"), rgba(189, 137, 60, 0.568);
     background-blend-mode: multiply;
     background-size: cover;
@@ -174,7 +178,12 @@ li img {
     font-weight: bold;
     transform: scale(1);
     box-shadow: 0px 1.5vw 4vw white;
-    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    filter: brightness(100%);
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out, filter 0.5s ease-in-out;
+}
+
+.ww h2 {
+    text-decoration: none;
 }
 
 .ww:not(.world-highlighted):hover {
@@ -186,7 +195,8 @@ li img {
 .world-highlighted {
     transform: scale(1.3);
     box-shadow: 0px 20px 50px white;
-    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+    filter: brightness(130%);
+    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out, filter 0.5s ease-in-out;
 }
 
 .init-map-button-container {
@@ -212,7 +222,7 @@ li img {
     transform-origin: top;
     transition: transform 1s ease-in;
     z-index: 1;
-    margin-top: -160px;
+    margin-top: -100px;
 }
 
 .period-button {
@@ -306,6 +316,7 @@ li img {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: default;
 }
 
 .start-date {
@@ -387,14 +398,15 @@ li img {
 }
 
 #year { 
+    text-align: center;
     font-family: 'Special Elite', cursive;
     font-size: 35px;
     color: rgb(8, 8, 8);
     bottom: -10%;
     position: absolute;
     z-index: 2;
-    margin: 0px 43% 2%;
-    width: 30%;
+    margin: 0px 25% 15px;
+    width: 50%;
 }
 
 #map {
@@ -450,7 +462,8 @@ li img {
 .flagpole {
     height: 100%;
     width: 17px;
-    background: url("/assets/flag_images/flagpole2.png") no-repeat;
+    background: url("/assets/flag_images/flagpole2.png") no-repeat, linear-gradient(0deg, rgba(31, 20, 5, 0.986) 1%, rgba(31, 20, 5, 0.753) 2%, rgba(31, 20, 5, 0.397) 5%, rgba(31, 20, 5, 0) 100%);
+    background-blend-mode: multiply;
 }
 
 .flags {
@@ -506,92 +519,6 @@ td {
     width: 80%;
     margin: 5% 10% 0 10%;
     font-size: 25px;
-}
-
-
-@media only screen and (max-width: 900px) {
-  #overview {
-    visibility: hidden;
-  }
-
-  .start-end-date {
-      margin-top: 0px;
-  }
-
-  #map {
-      width: 100%;
-      left: 0px;
-  }
-}
-
-
-@media only screen and (max-width: 700px) {
-  .init-page-container {
-      height: 120vh;
-  }
-
-  .page-container {
-      height: 220vh;
-  }
-
-  .key {
-      margin-top: -300px;
-      flex-wrap: wrap;
-  }
-
-  .ww1 {
-      order: 1;
-      margin: 50px;
-  }
-
-  .ww2 {
-      order: 2;
-      margin: 50px;
-  }
-
-  .key-table {
-      order: 3;
-      width: 100%;
-  }
-
-  .pb1, .pb2 {
-      visibility: collapse;
-  }
-
-  .contact-link {
-      width: 66.6px;
-      height: 37px;
-      font-size: 16px;
-      margin: 60px 5px 0px 0px;
-  }
-
-  .infoBoxTable {
-      width: 100%;
-  }
-
-  .battle-description {
-      left: 0px;
-      width: 100%;
-      margin: 20px 0px 0px;
-  }
-
-  .fFlagsNpole {
-    width: 0px;
-    visibility: collapse;
-  }
-
-  .eFlagsNpole {
-    width: 0px;
-    visibility: collapse;
-  }
-
-  #battleInfoBox, tr, .battle-description {
-      max-width: 98vw;
-  }
-
-  th, td {
-      max-width: 50%;
-  }
 }
 
 /* Feedback Page */
@@ -689,4 +616,119 @@ td {
 
 .feedback-response {
     color: whitesmoke;
+}
+
+
+@media only screen and (min-width: 1600px) {
+    .page-container {
+        height: 2600px;
+    }  
+
+    .key {
+        margin-top: calc(-25vw - 50px);
+    }
+
+    .map-button-container {
+        margin-top: calc(-25vw - 50px);
+    }
+
+    #map {
+        height: 70vh;
+    }
+
+}
+
+@media only screen and (max-width: 900px) {
+  #overview {
+    visibility: hidden;
+  }
+
+  .start-end-date {
+      margin-top: 0px;
+  }
+
+  #map {
+      width: 100%;
+      left: 0px;
+  }
+
+    #year {
+        font-size: 20px;
+    }
+}
+
+
+@media only screen and (max-width: 700px) {
+  .init-page-container {
+      height: 100vh;
+  }
+
+  .page-container {
+      height: 1500px;
+  }
+
+  .intro p {
+      font-size: 16px;
+      line-height: 16px;
+  }
+
+  .key {
+      margin-top: -100px;
+      flex-wrap: wrap;
+  }
+
+  .ww1 {
+      order: 1;
+      margin-right: 0px;
+  }
+
+  .ww2 {
+      order: 2;
+      margin-left: 0px;
+  }
+
+  .key-table {
+      order: 3;
+      width: 100%;
+  }
+
+  .pb1, .pb2 {
+      visibility: collapse;
+  }
+
+  .contact-link {
+    width: 41.6px;
+    height: 23.5px;
+    font-size: 11px;
+    padding-top: 2px;
+    margin: 10px 5px 0px 0px;
+}
+
+  .infoBoxTable {
+      width: 100%;
+  }
+
+  .battle-description {
+      left: 0px;
+      width: 100%;
+      margin: 20px 0px 0px;
+  }
+
+  .fFlagsNpole {
+    width: 0px;
+    visibility: collapse;
+  }
+
+  .eFlagsNpole {
+    width: 0px;
+    visibility: collapse;
+  }
+
+  #battleInfoBox, tr, .battle-description {
+      max-width: 98vw;
+  }
+
+  th, td {
+      max-width: 50%;
+  }
 }
