--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,17 @@
 /* Page Background */
 
 h1 {
+    text-decoration: none;
     font-family: 'Special Elite', sans-serif;
     font-size: calc(2vw + 30px);
     color: rgb(58, 32, 27);
     margin: 20px 0px 0px;
     border-bottom: 2px rgb(37, 17, 37);
+}
+
+h1 a{
+    text-decoration: none;
+    color: rgb(58, 32, 27);
 }
 
 h2 {
@@ -142,7 +148,7 @@ li img {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 4x 6px black;
+    box-shadow: 0px 3px 5px black;
     opacity: 0%;
     transform: scale(0);
     transition: opacity 2s ease, transform 1s ease-in-out;
@@ -500,17 +506,27 @@ th h1 {
 
 th, td {
     font-family: 'Josefin Slab', sans-serif;
-    color: white;
+    color: whitesmoke;
     margin-bottom: 15px;
-    border-bottom: 1px brown;
+}
+
+.battle-title {
+    height: 10px;
 }
 
 th a {
     text-decoration: none;
-    color: rgb(216, 180, 156);
+}
+
+th img {
+    position: absolute;
+    left: 20%;
+    width: 50px;
+    height: 50px;
 }
 
 td {
+    word-wrap: normal;
     width: 50%;
     text-align: center;
 }
@@ -636,6 +652,15 @@ td {
         height: 70vh;
     }
 
+  .feedback-form {
+      width: 50%;
+  }
+
+  .form-control {
+      width: 50%;
+  }
+
+
 }
 
 @media only screen and (max-width: 900px) {
@@ -696,6 +721,14 @@ td {
       visibility: collapse;
   }
 
+  #map {
+      height: 100vh;
+  }
+
+  #year {
+      margin-bottom: 60px;
+  }
+
   .contact-link {
     width: 41.6px;
     height: 23.5px;
@@ -731,4 +764,17 @@ td {
   th, td {
       max-width: 50%;
   }
+
+  th img {
+      left: 0px;
+  }
+
+  .feedback-form {
+      width: 90%;
+  }
+
+  .form-control {
+      width: 90%;
+  }
+
 }
